# mhsb

./: .gitignore  pyproject.toml
app/: __init__.py  config.py  mixes.py  music.py  routes.py
app/static/scss/: base.scss  footer.scss  mixes.scss  nav.scss  vars.scss
app/static/styles/: footer.css  home.css  vars.css
app/templates/: base.html  footer.html  home.html  mixes.html  nav.html
